Add additional interop notes (#14)